--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
+    <!-- header section -->
     <header class="header-section">
       <nav class="nav-section">
         <h2 class="nav-title">All Thinks Are Possible If You believe</h2>
@@ -24,5 +25,23 @@
       </nav>
       <img src="images/banner/banner1.png" alt="">
     </header>
+    <!-- banner section -->
+    <div class="banner">
+        <div class="banner-image">
+            <img src="images/person.png" alt="">
+        </div>
+        <div class="banner-title">
+            <h3>My failures of previous year</h3>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <ul>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+            </ul>
+        </div>
+        
+    </div>
   </body>
 </html>
