--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styeels/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   </head>
   <body>
     <!-- header section -->
@@ -28,12 +29,15 @@
     <!-- banner section -->
     <div class="banner">
         <div class="banner-image">
-            <img src="images/person.png" alt="">
+           <div class="div">
+            <img class="circle" src="images/person.png" alt="">
+           </div>
+            
         </div>
         <div class="banner-title">
-            <h3>My failures of previous year</h3>
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-            <ul>
+            <h3 class="banner-head">My failures of previous year</h3>
+            <p class="banner-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <ul class="unordered-list">
                 <li>Contrary to popular belief, is not simply.</li>
                 <li>Contrary to popular belief, is not simply.</li>
                 <li>Contrary to popular belief, is not simply.</li>
@@ -43,5 +47,32 @@
         </div>
         
     </div>
+    <section class="my-plans">
+
+        <h3 class="section-title">My Plans</h3>
+        <!-- .plans-container>.plans*4>img+p.plans-title+p.plans-description>lorem15 -->
+        <div class="plans-container">
+            <div class="plans">
+                <img src="" alt="">
+                <p class="plans-title">Web Development</p>
+                <p class="plans-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sed, inventore deleniti quas necessitatibus enim!</p>
+            </div>
+            <div class="plans">
+                <img src="" alt="">
+                <p class="plans-title"></p>
+                <p class="plans-description">Sequi ad sunt, quam voluptate placeat sint eligendi est quisquam, incidunt reprehenderit earum obcaecati consequatur?</p>
+            </div>
+            <div class="plans">
+                <img src="" alt="">
+                <p class="plans-title"></p>
+                <p class="plans-description">Asperiores dignissimos est, quos velit voluptate corporis animi quod sit vero provident ut odit voluptates?</p>
+            </div>
+            <div class="plans">
+                <img src="" alt="">
+                <p class="plans-title"></p>
+                <p class="plans-description">Reiciendis, molestias aspernatur voluptatem vero quae repudiandae temporibus commodi quibusdam dicta cumque in error provident?</p>
+            </div>
+        </div>
+    </section>
   </body>
 </html>
