--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
       <!-- .plans-container>.plans*4>img+p.plans-title+p.plans-description>lorem15 -->
       <div class="plans-container">
         <div class="plans">
-          <img src="/images/icons/web.png" alt="" />
+          <img src="images/icons/web.png" alt="#" />
           <p class="plans-title">Web Development</p>
           <p class="plans-description">I want to start</p>
         </div>
         <div class="plans">
-          <img src="/images/icons/js.png" alt="" />
+          <img src="/images/icons/js.png" alt="#" />
           <p class="plans-title">Javascript</p>
           <p class="plans-description">I want to learn</p>
         </div>
         <div class="plans">
-          <img src="/images/icons/smoke.png" alt="" />
+          <img src="/images/icons/smoke.png" alt="#" />
           <p class="plans-title">Smoking Habit</p>
           <p class="plans-description">I want to end</p>
         </div>
         <div class="plans">
-          <img src="/images/icons/ecom.png" alt="" />
+          <img src="/images/icons/ecom.png" alt="#" />
           <p class="plans-title">ecommerce</p>
           <p class="plans-description">I want to develop</p>
         </div>
