--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p class="plans-description">I want to start</p>
         </div>
         <div class="plans">
-          <img src="/images/icons/js.png" alt="#" />
+          <img src="images/icons/js.png" alt="#" />
           <p class="plans-title">Javascript</p>
           <p class="plans-description">I want to learn</p>
         </div>
