--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <p class="plans-description">I want to learn</p>
         </div>
         <div class="plans">
-          <img src="/images/icons/smoke.png" alt="#" />
+          <img src="images/icons/smoke.png" alt="#" />
           <p class="plans-title">Smoking Habit</p>
           <p class="plans-description">I want to end</p>
         </div>
