--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p class="plans-description">I want to end</p>
         </div>
         <div class="plans">
-          <img src="/images/icons/ecom.png" alt="#" />
+          <img src="images/icons/ecom.png" alt="#" />
           <p class="plans-title">ecommerce</p>
           <p class="plans-description">I want to develop</p>
         </div>
